force-app/main/default/objects/RE_MOAHistory__c/RE_MOAHistory__c.object-meta.xml
<CustomObject>
    <label>MOA History</label>
    <nameField>
        <displayFormat>MOAH-{000000000}</displayFormat>
        <label>MOA History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MOA History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>