force-app/main/default/objects/RE_MOAHistory__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>MOA Created By ID</inlineHelpText>
    <label>MOA Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MOA_History1</relationshipName>
    <type>Lookup</type>
</CustomField>