force-app/main/default/objects/RE_MOAHistory__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <inlineHelpText>MOA Created Date</inlineHelpText>
    <label>MOA Created Date</label>
    <type>DateTime</type>
</CustomField>