force-app/main/default/objects/RE_MOAHistory__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <inlineHelpText>MOA Last Activity Date</inlineHelpText>
    <label>MOA Last Activity Date</label>
    <type>Date</type>
</CustomField>