force-app/main/default/objects/RE_MOAHistory__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>MOA Last Modified By ID</inlineHelpText>
    <label>MOA Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MOA_History2</relationshipName>
    <type>Lookup</type>
</CustomField>