force-app/main/default/objects/RE_MOAHistory__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <inlineHelpText>MOA Last Modified Date</inlineHelpText>
    <label>MOA Last Modified Date</label>
    <type>DateTime</type>
</CustomField>