force-app/main/default/objects/RE_MOAHistory__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <inlineHelpText>MOA Last Referenced Date</inlineHelpText>
    <label>MOA Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>