force-app/main/default/objects/RE_MOAHistory__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <inlineHelpText>MOA Last Viewed Date</inlineHelpText>
    <label>MOA Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>