force-app/main/default/objects/RE_MOAHistory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MOA Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MOA_History3</relationshipName>
    <type>Lookup</type>
</CustomField>