force-app/main/default/objects/RE_MOAHistory__c/fields/RE_AM_Challenged_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_AM_Challenged_Price__c</fullName>
    <label>AM Challenged Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>