force-app/main/default/objects/RE_MOAHistory__c/fields/RE_AM_Comments__c.field-meta.xml
<CustomField>
    <fullName>RE_AM_Comments__c</fullName>
    <label>AM Comments</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>