force-app/main/default/objects/RE_MOAHistory__c/fields/RE_Approval__c.field-meta.xml
<CustomField>
    <fullName>RE_Approval__c</fullName>
    <label>Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>