force-app/main/default/objects/RE_MOAHistory__c/fields/RE_CND_Actual_Delta__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Actual_Delta__c</fullName>
    <label>Actual Delta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>