force-app/main/default/objects/RE_MOAHistory__c/fields/RE_CND_CAD_Delta_cpl__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_CAD_Delta_cpl__c</fullName>
    <label>CAD Delta cpl</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>