force-app/main/default/objects/RE_MOAHistory__c/fields/RE_CND_Current_OPIS_Selected_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Current_OPIS_Selected_Date__c</fullName>
    <label>Current OPIS Selected Date</label>
    <type>Date</type>
</CustomField>