force-app/main/default/objects/RE_MOAHistory__c/fields/RE_CND_Difference__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Difference__c</fullName>
    <label>Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>