force-app/main/default/objects/RE_MOAHistory__c/fields/RE_CND_New_End_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_New_End_Price__c</fullName>
    <label>New End Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>