force-app/main/default/objects/RE_MOAHistory__c/fields/RE_CND_Previous_FxRate__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Previous_FxRate__c</fullName>
    <label>Previous FxRate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>