force-app/main/default/objects/RE_MOAHistory__c/fields/RE_Country__c.field-meta.xml
<CustomField>
    <fullName>RE_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>MOA History</relationshipLabel>
    <relationshipName>MOA_History</relationshipName>
    <type>Lookup</type>
</CustomField>