force-app/main/default/objects/RE_MOAHistory__c/fields/RE_Depot_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Depot_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>MOA History</relationshipLabel>
    <relationshipName>MOA_History</relationshipName>
    <type>Lookup</type>
</CustomField>