force-app/main/default/objects/RE_MOAHistory__c/fields/RE_Final_CO_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Final_CO_Value__c</fullName>
    <label>Final CO Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>