force-app/main/default/objects/RE_MOAHistory__c/fields/RE_MC_Morning__c.field-meta.xml
<CustomField>
    <fullName>RE_MC_Morning__c</fullName>
    <label>CBU MC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>