force-app/main/default/objects/RE_MOAHistory__c/fields/RE_Prev_Mid_Day_price_out__c.field-meta.xml
<CustomField>
    <fullName>RE_Prev_Mid_Day_price_out__c</fullName>
    <label>Prev Mid Day price out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>