force-app/main/default/objects/RE_MOAHistory__c/fields/RE_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>MOA History</relationshipLabel>
    <relationshipName>MOA_History</relationshipName>
    <type>Lookup</type>
</CustomField>