force-app/main/default/objects/RE_MOAHistory__c/fields/RE_Sales_org__c.field-meta.xml
<CustomField>
    <fullName>RE_Sales_org__c</fullName>
    <label>RE Sales org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>