force-app/main/default/objects/RE_MOAHistory__c/fields/RE_Status__c.field-meta.xml
<CustomField>
    <fullName>RE_Status__c</fullName>
    <description>Used for approval process</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>