force-app/main/default/objects/RE_MOAHistory__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <inlineHelpText>MOA System Modstamp</inlineHelpText>
    <label>MOA System Modstamp</label>
    <type>DateTime</type>
</CustomField>