force-app/main/default/objects/RE_MOAHistory__c/recordTypes/Canada_Execute_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Canada_Execute_Pricing</fullName>
    <active>true</active>
    <description>Record type for Revolution Canada Execute Pricing</description>
    <label>Canada Execute Pricing</label>
</RecordType>