force-app/main/default/objects/RE_MOAHistory__c/recordTypes/Canada_Market_Moves.recordType-meta.xml
<RecordType>
    <fullName>Canada_Market_Moves</fullName>
    <active>true</active>
    <description>Record type for Revolution Canada Market Moves</description>
    <label>Canada Market Moves</label>
</RecordType>