force-app/main/default/objects/RE_MOAHistory__c/recordTypes/RE_MY_List_Price.recordType-meta.xml
<RecordType>
    <fullName>RE_MY_List_Price</fullName>
    <active>true</active>
    <label>RE MY List Price</label>
</RecordType>