force-app/main/default/objects/RE_MOAHistory__c/listViews/RE_MY_Direct_List_Price.listView-meta.xml
<ListView>
    <fullName>RE_MY_Direct_List_Price</fullName>
    <columns>NAME</columns>
    <columns>RE_Product__c</columns>
    <columns>RE_Sales_org__c</columns>
    <columns>RE_Final_PSP__c</columns>
    <columns>RE_valid_from__c</columns>
    <columns>RE_valid_to__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MOA__c.RE_MY_List_Price</value>
    </filters>
    <filters>
        <field>RE_valid_from__c</field>
        <operation>equals</operation>
        <value>7/19/2021</value>
    </filters>
    <label>RE MY Direct List Price</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>